<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/main_ic" />

    <EditText
        android:id="@+id/login_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/login_text"
        android:layout_alignStart="@+id/login_text"
        android:layout_below="@id/login_text"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/show_password_chb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/activated_btn"
        android:text="@string/sign_in"
        android:textColor="@color/colorYellow" />

    <CheckBox
        android:id="@+id/show_password_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/password_text"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="10dp"
        android:text="@string/show_password"
        android:textColor="@color/colorAccent" />

</RelativeLayout>
