<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:weightSum="1">

    <TextView
        android:id="@+id/general_settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/additional_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorYellow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/font_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/add_item1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item1_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="end"
            android:progress="70"
            android:max="100"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/font_color_text" />

        <TextView
            android:id="@+id/font_color_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar"
            android:layout_alignTop="@+id/seekBar"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/add_item2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/some_value_settings"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:id="@+id/some_value" />

        <TextView
            android:id="@+id/settings_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/item_3"
            android:layout_alignBottom="@id/some_value"
            android:layout_alignTop="@id/some_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
</LinearLayout>